tests/fixtures/invalid/str_bitxor_int.py
# Cannot bitwise XOR Str and Int
x: str = "hello" ^ 1
